--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,17 @@
+# Dependências principais
 Flask==2.3.3
+Werkzeug==2.3.7
+
+# Banco de dados (opcional)
+PyMySQL==1.1.0
 mysql-connector-python==8.1.0
+
+# Utilitários
 python-dotenv==1.0.0
+
+# Desenvolvimento e testes
+pytest==7.4.2
+pytest-flask==1.2.0
+
+# Segurança
+Flask-CORS==4.0.0
